A YouTube video gets stuck after rapidly tapping on touchbar’s PIP button https://bugs.webkit.org/show_bug.cgi?id=212729

Reviewed by Darin Adler.

Call HTMLVideoElement::setFullscreenMode() instead of HTMLMediaElement::enterFullscreen()
and HTMLMediaElement::exitFullscreen() to toggle picture-in-picture mode.
HTMLVideoElement::setFullscreenMode() is robust under stress test after r262456.

Manually tested.

* platform/cocoa/PlaybackSessionModelMediaElement.mm:
(WebCore::PlaybackSessionModelMediaElement::togglePictureInPicture):


Canonical link: https://commits.webkit.org/225605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262599 268f45cc-cd09-0410-ab3c-d52691b4dbfc